--- a/boost.html
+++ b/boost.html
@@ -119,16 +119,16 @@
 								<h3 class="text-uppercase">Specials</h3>
 								<div>
 									<label class="radio text-uppercase">
-										<input type="radio" name="specials"><span>End game with 9 or more kills</span>
+										<input type="radio" name="end"><span class="special">End game with 9 or more kills</span>
 									</label>
 									<label class="radio text-uppercase">
-										<input type="radio" name="specials"><span>Stream my boost</span>
+										<input type="radio" name="stream"><span class="special">Stream my boost</span>
 									</label>
 									<label class="radio text-uppercase">
-										<input type="radio" name="specials"><span>I want my old booster</span>
+										<input type="radio" name="old"><span class="special">I want my old booster</span>
 									</label>
 									<label class="radio text-uppercase">
-										<input type="radio" name="specials"><span>I want to play with booster</span>
+										<input type="radio" name="booster"><span class="special">I want to play with booster</span>
 									</label>
 								</div>
 							</div>
@@ -227,17 +227,24 @@
 							<h3 class="text-uppercase">Contacts</h3>
 							<hr>
 							<p>Once you pay how would you like to be contacted by our company to assign teh booster?</p>
-							<div class="checkbox">
-								<label><input type="checkbox"> <img src="assets/img/discord_logo.png" width="50"></label>
-							</div>
-							<hr width="30%">
-							<div class="checkbox">
-								<label><input type="checkbox"> <img src="assets/img/email_logo.png" width="50"></label>
-							</div>
-							<hr width="30%">
-							<div class="checkbox">
-								<label><input type="checkbox"> <img src="assets/img/skype_logo.png" width="50"></label>
-							</div>
+							<div class="row">
+								<div class="col-sm-5">
+									<div class="input-group">
+										<span class="input-group-addon"><img src="assets/img/discord_logo.png" width="30"></span>
+										<input type="text" class="form-control">
+									</div>
+									<hr>
+									<div class="input-group">
+										<span class="input-group-addon"><img src="assets/img/email_logo.png" width="30"></span>
+										<input type="text" class="form-control">
+									</div>
+									<hr>
+									<div class="input-group">
+										<span class="input-group-addon"><img src="assets/img/skype_logo.png" width="30"></span>
+										<input type="text" class="form-control">
+									</div>	
+								</div>
+							</div>							
 							<hr>
 							<div class="text-right">
 								<a class="btn prev-step">Back</a>
